@@ -1,14 +1,15 @@
 package vn.graybee.modules.product.service.impl;
 
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import vn.graybee.modules.product.model.ProductImage;
 import vn.graybee.modules.product.repository.ProductImageRepository;
 import vn.graybee.modules.product.service.ProductImageService;
 
-import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 public class ProductImageServiceImpl implements ProductImageService {
@@ -20,6 +21,7 @@ public class ProductImageServiceImpl implements ProductImageService {
     }
 
     @Override
+    @Transactional(rollbackFor = RuntimeException.class)
     public void saveProductImages(Long productId, List<String> imageUrls) {
 
         if (imageUrls == null || imageUrls.isEmpty()) {
@@ -50,25 +52,36 @@ public class ProductImageServiceImpl implements ProductImageService {
     }
 
     @Override
+    @Transactional(rollbackFor = RuntimeException.class)
     public void updateProductImages(Long productId, List<String> images) {
 
-        if (images.isEmpty()) {
+        if (images == null || images.isEmpty()) {
+            productImageRepository.deleteByProductId(productId);
             return;
         }
 
-        List<String> currentImageUrls = productImageRepository.findImageUrlsByProductId(productId);
+        List<ProductImage> currentImages = productImageRepository.findAllProductImageByProductId(productId);
+        Set<String> currentImageUrls = currentImages.stream()
+                .map(ProductImage::getImageUrl)
+                .collect(Collectors.toSet());
 
-        Set<String> uniqueImageUrl = new HashSet<>(images);
+        Set<String> newImageUrls = new HashSet<>(images);
 
-        productImageRepository.deleteByProductIdAndImageUrlNotIn(productId, new ArrayList<>(uniqueImageUrl));
+        List<String> toDelete = currentImageUrls.stream()
+                .filter(url -> !newImageUrls.contains(url))
+                .collect(Collectors.toList());
 
-        List<ProductImage> newImages = uniqueImageUrl.stream().skip(1)
+        if (!toDelete.isEmpty()) {
+            productImageRepository.deleteByProductIdAndImageUrlIn(productId, toDelete);
+        }
+
+        List<ProductImage> toAdd = newImageUrls.stream()
                 .filter(url -> !currentImageUrls.contains(url))
                 .map(url -> new ProductImage(productId, url))
-                .toList();
+                .collect(Collectors.toList());
 
-        if (!newImages.isEmpty()) {
-            productImageRepository.saveAll(newImages);
+        if (!toAdd.isEmpty()) {
+            productImageRepository.saveAll(toAdd);
         }
 
     }
